
 - Added a 'prereq_report' action that shows the user a well-formatted
   list of all prerequisites, the versions required, and the versions
   actually installed. [David Wheeler]

 - Fixed a bug when creating the META.yml file without the help of
   YAML.pm - some common strings weren't quoted & escaped properly.
   Now only some uncommon ones are. [Spotted by Joshua ben Jore]

 - Added an "Examples on CPAN" section to the cookbook, with an
   initial entry pointing to John Peacock's SVN-Notify-Mirror
   distribution.

 - Add an invoked_action() method to return the name of the original
   action invoked by the user.

 - Add 'meta-spec' field to the generated META.yml file, including the
   version of the specification followed by the current Module::Build
   and the url where the specification can be found.

 - Introduced two actions, 'html' & 'manpages', that generate
   documentation for POD when the respective feature is enabled.  The
   actions will generate the documents even if there is no set place
   to install to.  However, if the actions are invoked as a dependency
   of another action (e.g. build), the documentation will only be
   built when there is a default or user-specified place to install to.

 - Added support for environment variable, 'MODULEBUILDRC', which can
   be used to specify the full path to an option file to use instead
   of the default location of ~/.modulebuildrc. A special undocumented
   setting of 'NONE' tells Module::Build not to load any user settings,
   so tests can be run without tainting from user options.

 - Documented and improved reliminary support for more Getopt::Long
   style options are supported, including boolean options (--verbose,
   --no-verbose), and use of hyphens in option names in addition to
   underscores.

 - The option to disable/enable reading of the ~/.modulebuildrc file
   is changed from 'skip_rcfile' to 'use_rcfile'

 - Allow the 'distmeta' action to continue when 'MANIFEST' is missing,